# thymer

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.py  pyproject.toml  requirements.txt  setup.py
.github/: CHECKLIST.md
src/: __main__.py  analytics.py  app.py  storage.py  timer.py
thymer/: __init__.py  __main__.py  app.py  timer.py
