[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thymer"
version = "0.1.0"
description = "A terminal-based timer app for productive developers"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Contributors", email = "contributors@thymer.dev"}
]
keywords = ["timer", "productivity", "cli", "terminal", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.41.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "nuitka>=1.8.0",
    "taskipy>=1.10.0",
]

[project.scripts]
thymer = "src.app:main"

[project.urls]
Homepage = "https://github.com/itzsrikanth/thymer"
Repository = "https://github.com/itzsrikanth/thymer"
Issues = "https://github.com/itzsrikanth/thymer/issues"

[tool.taskipy.tasks]
install = "pip install -e '.[dev]'"
run = "python3 -m src"
build = "python3 build.py"
clean = "rm -rf build/ dist/ *.egg-info/ thymer.build/ thymer.dist/ thymer.onefile-build/ && find . -type d -name __pycache__ -exec rm -rf {} + && find . -type f -name '*.pyc' -delete"
test = "python3 -c 'from src import timer, storage, analytics; print(\"✅ All modules import successfully\")'"
venv = "python3 -m venv venv && venv/bin/python3 -m pip install --upgrade pip && echo 'Virtual environment created. Activate with: source venv/bin/activate'"
install-venv = "python3 -m venv venv && venv/bin/python3 -m pip install --upgrade pip && venv/bin/pip install -e '.[dev]' && echo 'Installed in virtual environment. Activate with: source venv/bin/activate'"
run-direct = "pip install -r requirements.txt && python3 -m src"
